<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">indus_v1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_somewhat_clear">Somewhat clear</string>
  <string name="lbl_baleno">Baleno </string>
  <string name="lbl_8_79lakh">8.79Lakh</string>
  <string name="lbl_bad">Bad</string>
  <string name="lbl_8_79_lakhs">\u20b9 8.79 Lakhs</string>
  <string name="msg_create_an_accou2">Create an Account,</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_swift">Swift</string>
  <string name="lbl_enter_id">Enter id</string>
  <string name="lbl_6_66"> 6.66</string>
  <string name="lbl_4_5">4/5</string>
  <string name="lbl_customer_id">Customer Id</string>
  <string name="lbl_customer_id2">customer id</string>
  <string name="lbl_alto">Alto</string>
  <string name="lbl_feedback">Feedback</string>
  <string name="msg_enter_your_pass">Enter your password</string>
  <string name="lbl_password2">password</string>
  <string name="lbl_create_account">Create Account</string>
  <string name="lbl_sign_in">Sign in</string>
  <string name="lbl_indus_motors2">INDUS MOTORS</string>
  <string name="lbl_2_5">2/5</string>
  <string name="msg_enter_customer">Enter customer id</string>
  <string name="lbl_7_99_lakhs">\u20b9 7.99 Lakhs</string>
  <string name="lbl_sign_up">Sign up</string>
  <string name="lbl_swift_dzire">Swift dzire</string>
  <string name="lbl_not_very_clear">Not very clear</string>
  <string name="lbl_very_likely">Very likely</string>
  <string name="lbl_name">name</string>
  <string name="lbl_back_to_home">back to home </string>
  <string name="lbl_dissatisfied">Dissatisfied</string>
  <string name="lbl_very_unlikely">Very unlikely</string>
  <string name="msg_create_an_accou">Create an Account, </string>
  <string name="lbl">\u20b9</string>
  <string name="lbl_lakhs"> Lakhs</string>
  <string name="lbl_submit">SUBMIT</string>
  <string name="lbl_admin2">ADMIN </string>
  <string name="lbl_3_96lakh">3.96Lakh</string>
  <string name="msg_you_already_hav">You Already have account,</string>
  <string name="lbl_swift_dzire2">Swift Dzire</string>
  <string name="msg_how_likely_are">How likely are you to recommend this car servicing center to others based on your experience?</string>
  <string name="lbl_email">email</string>
  <string name="msg_significantly_d">Significantly delayed</string>
  <string name="lbl_yes_on_time">Yes, on time</string>
  <string name="msg_thanks_for_feed">Thanks for feedback</string>
  <string name="lbl_click">Click</string>
  <string name="lbl_3_96_lakhs">\u20b9 3.96 Lakhs</string>
  <string name="lbl_neutral">Neutral</string>
  <string name="lbl_6_66_lakhs">\u20b9 6.66 Lakhs</string>
  <string name="msg_did_the_servici">Did the servicing center complete the work on your car within the promised timeframe?</string>
  <string name="lbl_selling_car_of">Selling Car of </string>
  <string name="msg_sorry_user_deta">sorry
user details are not available</string>
  <string name="msg_engine_1197cc">Engine  1197cc , 4Cylinders Inline
4 Valves/Cylinder, DOHC ; Engine Type. VVT ; Fuel Type. Petrol</string>
  <string name="lbl_3_96"> 3.96</string>
  <string name="lbl_admin">Admin</string>
  <string name="lbl_7_99"> 7.99</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_3_5">3/5</string>
  <string name="lbl_5_5">5/5</string>
  <string name="msg_www_indusmotor">www.indusmotor.com</string>
  <string name="lbl_unlikely">Unlikely</string>
  <string name="lbl_welcome">WELCOME </string>
  <string name="lbl_not_completed">Not completed</string>
  <string name="lbl_top_4">Top 4</string>
  <string name="lbl_1_5">1/5</string>
  <string name="msg_how_satisfied_a">How satisfied are you with the communication and explanation of the service performed on your car?</string>
  <string name="lbl_yes_very_clear">Yes, very clear</string>
  <string name="msg_slightly_delaye">Slightly delayed</string>
  <string name="lbl_user">User</string>
  <string name="lbl_7_99lakh">7.99Lakh</string>
  <string name="lbl_very_satisfied">Very satisfied</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_feedbacks">Feedbacks</string>
  <string name="lbl_likely">Likely</string>
  <string name="msg_sorry_currently">Sorry
currently no feedbacks</string>
  <string name="lbl_admin_id">Admin Id</string>
  <string name="lbl_8_79"> 8.79</string>
  <string name="lbl_average">Average</string>
  <string name="lbl_2018">2018</string>
  <string name="lbl_satisfied">Satisfied</string>
  <string name="msg_5_seater_3_cyli">5 seater 3 cylinder car and has length of 3430mm, width of 1490mm and a wheelbase of 2360mm.</string>
  <string name="msg_dzire_is_a_5_se">Dzire is a 5 seater 4 cylinder car and has length of 3995mm, width of 1735 and a wheelbase of 2450.</string>
  <string name="lbl_excellent">Excellent</string>
  <string name="msg_did_the_car_ser">Did the car servicing center provide a clear and detailed breakdown of the service costs?</string>
  <string name="msg_no_breakdown_pr">No breakdown provided</string>
  <string name="lbl_indusmotors">©indusmotors</string>
  <string name="lbl_6_66lakh">6.66Lakh</string>
  <string name="lbl_good">Good</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
