<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidSmallFourVM" type="com.indusv.app.modules.androidsmallfour.data.viewmodel.AndroidSmallFourVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAndroidSmall"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnsignup"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_134pxv"
            android:layout_marginEnd="@dimen/_58pxh"
            android:layout_marginStart="@dimen/_58pxh"
            android:layout_marginTop="@dimen/_134pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignup"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{androidSmallFourVM.androidSmallFourModel.txtSignup}"
                style="@style/txtInterregular32" tools:text="@string/lbl_sign_up"/>
            <EditText
                android:background="@drawable/rectangle_bg_bluegray_101"
                android:ellipsize="end" android:hint="@string/lbl_email"
                android:id="@+id/etGroupFiftyThree"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_31pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_5pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@={androidSmallFourVM.androidSmallFourModel.etGroupFiftyThreeValue}"
                android:textColorHint="@color/black_900_7f"
                style="@style/etSolid_1" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_bluegray_101"
                android:ellipsize="end" android:hint="@string/lbl_name"
                android:id="@+id/etGroupFiftyTwo"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_4pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_14pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@={androidSmallFourVM.androidSmallFourModel.etGroupFiftyTwoValue}"
                android:textColorHint="@color/black_900_7f"
                style="@style/etSolid_1" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_bluegray_101"
                android:ellipsize="end"
                android:hint="@string/lbl_customer_id2"
                android:id="@+id/etGroupFiftyOne"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_5pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_14pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@={androidSmallFourVM.androidSmallFourModel.etGroupFiftyOneValue}"
                android:textColorHint="@color/black_900_7f"
                style="@style/etSolid_1" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_bluegray_101"
                android:ellipsize="end"
                android:hint="@string/lbl_password2"
                android:id="@+id/etGroupFifty"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_5pxv"
                android:singleLine="true"
                android:text="@={androidSmallFourVM.androidSmallFourModel.etGroupFiftyValue}"
                android:textColorHint="@color/black_900_7f"
                style="@style/etSolid_1" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCreateAccount"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_42pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_8pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@string/lbl_create_account"
                android:textAllCaps="false" style="@style/btnSolid_6" tools:text="@string/lbl_create_account"/>
            <LinearLayout android:id="@+id/linearRowyoualreadyhav"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtYouAlreadyhav"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.83"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidSmallFourVM.androidSmallFourModel.txtYouAlreadyhav}"
                    style="@style/txtInterregular13" tools:text="@string/msg_you_already_hav"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLogin"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_weight="0.17"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidSmallFourVM.androidSmallFourModel.txtLogin}"
                    style="@style/txtInterregular13_1" tools:text="@string/lbl_login"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
